Fixed table overflow.

--- a/buy/static/css/bootstrap.css
+++ b/buy/static/css/bootstrap.css
@@ -1519,12 +1519,14 @@ table {
 }
 
 .table {
+  table-layout: fixed;
   width: 100%;
   margin-bottom: 18px;
 }
 
 .table th,
 .table td {
+  overflow: auto;
   padding: 8px;
   line-height: 18px;
   text-align: left;
